# Qt-game

./: CMakeLists.txt  Choose.qml  Components.qml  game.pro  gameentity.cpp  gameentity.h  images.qrc  main.cpp  main.qml  monster.cpp  monster.h  player.cpp  player.h
